dpf-ax changelog

	by <hackfin@section5.ch>
	Find details in the git or svn logs.

Sat, 05 Jan 2013
       by superelchi
       * New model:
	 - taobao (thx cuckoohello).

Thu, 03 Jan 2013
       by superelchi
       * New model:
	 - linkdelight_5 (thx LUISE).

Fri, 07 Dec 2012
       by superelchi
       * New model:
	 - clas_ohlson (thx BufferFramed).

Sat, 01 Dec 2012
       by superelchi
       * New models:
	 - linkdelight_4 (thx Solo0815)
         - pt824 (thx olderzeus).

Sun, 04 Nov 2012
       by superelchi
       * New model:
         - eachdesk_tumbler (thx c.dent).

Sat, 03 Nov 2012
       by superelchi
       * New model:
         - carrefour_bfv151 (thx assas1).

Thu, 23 Oct 2012
       by superelchi
       * New model:
         - intertronic (thx grouproot).

Wed, 17 Oct 2012
       by superelchi
       * New model:
         - sevendayshop_pebble (thx daveg).

Wed, 17 Oct 2012
       by superelchi
       * Added contrast support info to knowntypes.html.

Thu, 16 Oct 2012
v0.320 by superelchi
	* Support for model specific contrast init.
	* Dpf type definition moved from config.h to ./lcd/TYPE/dpfmodel.h.
	* New: knowntypes_builder.py builds type info from definitions in lcd/$(TYPE)/dpfmodel.h:
	  - fw/knowntypes.py - for use by identify.py
	  - fw/knowntypes.html - simple html page listing all supported dpfs.
	* Identify.py rewrite:
	  - Commandline options (-v = verbose, -d = developer support) replace manual dev_mode editing.
	  - Extended developer support by putting dump-snipppets and disassembler-scripts in folder fw/identify.out.
	  - Detection of default brightness / contrast value.
	  - Better identification of models mit non-standard init ("fake" CRC generation).
	  - Replaced knowdpfs.py with autogenerated knowntypes.py (see knowtypes_builder.py).
	* Shebang added to all python scripts in folder fw.
	* Hint to use hiddetach if dpf is claimed by hid added to rawusb.c
	* Modelname change:
	  - pearl -> pearl_portrait