@@ -1,0 +1,19 @@
+//
+// Type: abeyerr_black_2
+//
+// Status: supported
+// Credit: By superelchi, thx kroonen
+// Date: 2013-01-17
+// Url: http://www.ebay.com/itm/280828187564
+//
+// The CRCs identify.py detected - in the form "OpenWin CRC", "Init(Tbl) CRC"
+// CRC: 0xa27e3c21, 0x3d850b50
+//
+// 
+#define LCD_128x128
+#define LCD_CONTROLLER_CUSTOM
+//No valid Lcd_contrast routine in fw - contrast setting disabled
+//#define LCD_DEFAULT_CONTRAST_VALUE 4
+#define LCD_DEFAULT_BRIGHTNESS_VALUE 20
+// Contrast adjustable in menu
+//#define LCD_USER_ADJUSTABLE_CONTRAST 1
