@@ -1,0 +1,46 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	p3dir,#0x0
+	anl	p1dir,#0xe8
+	anl	p2dir,#0xfd
+	mov	dptr,#_custom_initseq
+	ljmp	_lcd_init_by_table
+
+;
+; No valid Lcd_Contrast routine - do not use contrast setting!
+;
+;_lcd_custom_setcontrast::
+;	ret
+	.area LCDAUX (CODE)
+
+;_custom_contrasttbl::
+;  .db  0x50, 0x5a, 0x60, 0x65, 0x6a, 0x70, 0x7a
+;_custom_contrasttbl_len::  .db  7
+
+;_custom_contrasttbl2::
+;  .db  0x71, 0x81, 0x91, 0x82, 0xff
+;_custom_contrasttbl2_len::  .db  5
+
+;_custom_contrasttbl2_offsets::
+;  .db  0x05
+;_custom_contrasttbl2_offsets_len::  .db  1
+
+_custom_backlighttbl::
+  .db  0x00, 0x0c, 0x18, 0x24, 0x30, 0x3c, 0x48, 0x54, 0x60, 0x6c
+  .db  0x78, 0x84, 0x90, 0x9c, 0xa8, 0xb4, 0xc0, 0xcc, 0xd8, 0xe4
+  .db  0xf0, 0xfc
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+_custom_backlighttbl2_len::  .db  0
+
+_custom_initseq::
+  .db  0x00, 0x10, 0xb0, 0x96, 0x11, 0xb0, 0xc8, 0x71, 0xe2, 0xb0
+  .db  0xc8, 0xb0, 0xc8, 0xb0, 0xc8, 0x71, 0xc4, 0x91, 0x8b, 0x7d
+  .db  0xea, 0x81, 0x84, 0x2f, 0xd1, 0xd6, 0xc0, 0x89, 0xa2, 0xc8
+  .db  0x18, 0xde, 0xaf, 0xff
+_custom_initseq_len::  .db  34
+
