@@ -3,6 +3,14 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Sun, 20 Jan 2013
+       by superelchi
+       * New model:
+	 - abeyerr_black_2 (thx koonen).
+       * New Work-In-Progress model:
+         - linkdelight_black_portrait (ths Papa Oscar).	
+	
+
 Sat, 05 Jan 2013
        by superelchi
        * New model:
